Fix Join Chat Room Dialog from presence applet context menu

Join Channel Widget filters by chatroom capabilities, caps weren't included
in the AccountFactory so it didn't work.

REVIEW: 109405
BUG: 316491